--- a/lib/messagebundles/MessagesBundle_pl.properties
+++ b/lib/messagebundles/MessagesBundle_pl.properties
@@ -1598,6 +1598,9 @@ STATS_RECEIVED_ALL_TITLE=TCP, UDP lub Multicast
 #??? STATS_QUERY_REQUEST_HOPS_LABEL=All received queries, by hops.
 #??? STATS_QUERY_REQUEST_TTL_TITLE=TTL
 #??? STATS_QUERY_REQUEST_TTL_LABEL=All received queries, by time to live (TTL).
+# Advanced Gnutella Message special queries
+#??? STATS_SPECIAL_QUERIES_TITLE=Special queries
+#??? STATS_SPECIAL_QUERIES_LABEL=All of the special marked queries.
 # Advanced Gnutella Message hops/ttl for query hits
 #??? STATS_QUERY_REPLY_HOPS_TITLE=Hops
 #??? STATS_QUERY_REPLY_HOPS_LABEL=All received query hits, by hops.
@@ -1695,7 +1698,7 @@ STATS_LIME_RECEIVED_BYTES_UDP_MESSAGES_TITLE=\u0141\u0105cznie
 #??? STATS_LIME_RECEIVED_BYTES_UDP_QUERY_REPLIES_TITLE=Query hits
 #??? STATS_LIME_RECEIVED_BYTES_UDP_QUERY_REPLIES_LABEL=Kilobytes for UDP query hits received from all Gnutella clients versus other LimeWires.
 #??? STATS_LIME_RECEIVED_BYTES_UDP_PUSH_REQUESTS_TITLE=Pushes
-#??? STATS_LIME_RECEIVED_BYTES_UDP_PUSH_REQUESTS_LABEL=Kilobytes for UDP pushes received from all Gnutella clients versus other LimeWires.
+	#??? STATS_LIME_RECEIVED_BYTES_UDP_PUSH_REQUESTS_LABEL=Kilobytes for UDP pushes received from all Gnutella clients versus other LimeWires.
 # number of kilobytes received for LimeWire-specific stats -- Multicast
 STATS_LIME_RECEIVED_BYTES_MULTICAST_MESSAGES_TITLE=Total
 #??? STATS_LIME_RECEIVED_BYTES_MULTICAST_MESSAGES_LABEL=Total kilobytes received by other LimeWires.
@@ -1714,6 +1717,46 @@ STATS_RECEIVED_AVERAGE_MESSAGE_SIZE_TITLE=Average size
 STATS_RECEIVED_AVERAGE_MESSAGE_SIZE_LABEL=The average size in kilobytes of received Gnutella messages.
 STATS_RECEIVED_AVERAGE_LIME_MESSAGE_SIZE_TITLE=Average size
 STATS_RECEIVED_AVERAGE_LIME_MESSAGE_SIZE_LABEL=The average size in kilobytes of received messages from LimeWires.
+
+################################################################################
+# Key/value pairs for advanced Gnutella message statistics -- qrp messages
+################################################################################
+QRP_MESSAGES=QRP
+QRP_ULTRAPEER=UltraHost
+QRP_LEAF=Listek
+
+#??? STATS_QRP_ULTRAPEER_ROUTED_QUERIES_SENT_TITLE=Sent
+#??? STATS_QRP_ULTRAPEER_ROUTED_QUERIES_SENT_LABEL=All queries that were routed to other Ultrapeers for the last hop, using query routing tables.
+#??? STATS_QRP_ULTRAPEER_ROUTED_QUERIES_SENT=Sent
+#??? STATS_QRP_ULTRAPEER_ROUTED_QUERIES_DROP=Not sent
+
+#??? STATS_QRP_LEAF_ROUTED_QUERIES_SENT_TITLE=Sent
+#??? STATS_QRP_LEAF_ROUTED_QUERIES_SENT_LABEL=All queries that were routed to leaves, using query routing tables.
+#??? STATS_QRP_LEAF_ROUTED_QUERIES_SENT=Sent
+#??? STATS_QRP_LEAF_ROUTED_QUERIES_DROP=Not sent
+
+#??? STATS_QRP_LEAF_ROUTED_QUERIES_RECEIVED_TITLE=Received
+#??? STATS_QRP_LEAF_ROUTED_QUERIES_RECEIVED_LABEL=All queries that were received from routed connections.
+#??? STATS_QRP_LEAF_ROUTED_QUERIES_HIT=Hit
+#??? STATS_QRP_LEAF_ROUTED_QUERIES_MISS=False positive
+
+################################################################################
+# Key/value pairs for advanced Gnutella message statistics -- errors messages
+################################################################################
+#??? ERROR_MESSAGES=Errors
+
+#??? STATS_ERROR_GENERIC_TITLE=Generic errors
+#??? STATS_ERROR_GENERIC_LABEL=Generic errors while reading messages.
+#??? STATS_ERROR_QUERIES_TITLE=Queries
+#??? STATS_ERROR_QUERIES_LABEL=Errors while reading query messages.
+#??? STATS_ERROR_QUERY_REPLIES_TITLE=Query replies
+#??? STATS_ERROR_QUERY_REPLIES_LABEL=Errors while reading query reply messages.
+#??? STATS_ERROR_PING_REPLY_TITLE=Ping replies
+#??? STATS_ERROR_PING_REPLY_LABEL=Errors while reading ping replies.
+#??? STATS_ERROR_PUSHES_TITLE=Pushes
+#??? STATS_ERROR_PUSHES_LABEL=Errors while reading pushes.
+#??? STATS_ERROR_VENDOR_TITLE=Vendor messages
+#??? STATS_ERROR_VENDOR_LABEL=Errors while reading vendor messages.
 
 ################################################################################
 # Key/value pairs for advanced Gnutella message statistics -- sent messages
@@ -1849,6 +1892,21 @@ STATS_SENT_ULTRAPEER_ROUTED_QUERIES_DROP_LABEL=
 STATS_SENT_LEAF_ROUTED_QUERIES_DROP_LABEL=
 
 ################################################################################
+# Key/value pairs for advanced Gnutella message statistics -- handshaking
+################################################################################
+#??? HANDSHAKING=Handshaking
+STATS_HANDSHAKING_LEAF_TITLE=Listek
+#??? STATS_HANDSHAKING_LEAF_LABEL=Statistics for handshaking as a leaf.
+STATS_HANDSHAKING_ULTRAPEER_TITLE=Ultrahost
+#??? STATS_HANDSHAKING_ULTRAPEER_LABEL=Statistics for handshaking as an ultrapeer.
+STATS_HANDSHAKING_OUTGOING_TITLE=Wychodz\u0105ce
+#??? STATS_HANDSHAKING_OUTGOING_LABEL=Statistics for outgoing Gnutella connection handshaking.
+STATS_HANDSHAKING_INCOMING_TITLE=Przychodz\u0105ce
+#??? STATS_HANDSHAKING_INCOMING_LABEL=Statistics for incoming Gnutella connection handshaking.
+#??? STATS_HANDSHAKING_OUTGOING_SERVER_REJECT_TITLE=Outgoing server reject
+#??? STATS_HANDSHAKING_OUTGOING_SERVER_REJECT_LABEL=Statistics for outgoing Gnutella connection handshaking rejections from the server.
+
+################################################################################
 # Key/value pairs for advanced Gnutella message statistics -- compression
 ################################################################################
 #??? COMPRESSABLE_MESSAGES=Compression
@@ -1889,6 +1947,34 @@ STATS_TOTAL_CONNECTION_ATTEMPTS_TITLE=Po\u0142\u0105czenia
 ################################################################################
 #??? STATS_TOTAL_HTTP_REQUESTS_TITLE=HTTP requests
 #??? STATS_TOTAL_HTTP_REQUESTS_LABEL=Total incoming HTTP requests received over time. This includes both HEAD and GET requests.
+
+################################################################################
+# Key/value pairs for advanced Download statistics
+################################################################################
+DOWNLOAD_STATISTICS=Pobierania
+STATS_DOWNLOAD_CONNECTIONS_TITLE=Po\u0142\u0105czenia
+#??? STATS_DOWNLOAD_CONNECTIONS_LABEL=Total outgoing download connections attempts over time. This includes both direct connections and pushed requests.
+#??? STATS_DOWNLOAD_RESPONSES_TITLE=Responses
+#??? STATS_DOWNLOAD_RESPONSES_LABEL=Total responses received from downloaders over time. This includes Busy, File Not Found, Not Sharing, Queued, misc. IO errors, and OK responses.
+#??? STATS_DOWNLOAD_ALTERNATE_TITLE=Alt. locations
+#??? STATS_DOWNLOAD_ALTERNATE_LABEL=Total alternate locations received and removed over time. This includes locations that we actively attempt to connect to, locations that we will ignore, locations that couldn't be removed, and locations that we removed permanently from attempting to connect to.
+#??? STATS_DOWNLOAD_TRANFERS_TITLE=Transfers
+#??? STATS_DOWNLOAD_TRANFERS_LABEL=Total transfers over time. This includes both HTTP1.1 and HTTP1.0 transfers. For HTTP1.1, values are per chunk.
+#??? STATS_DOWNLOAD_TCP_CONNECT_TIME_TITLE=TCP Connect Time
+#??? STATS_DOWNLOAD_TCP_CONNECT_TIME_LABEL=Records the time in milliseconds to establish TCP connections for downloads. This can vary, for example, when servers are experiencing high loads.
+
+################################################################################
+# Key/value pairs for advanced Upload statistics
+################################################################################
+UPLOAD_STATISTICS=Wysy\u0142ania
+#??? STATS_UPLOAD_REQUESTS_TITLE=Requests
+#??? STATS_UPLOAD_REQUESTS_LABEL=Total incoming upload requests. These numbers are incremented on every attempt to parse a request, and thus include every chunk for HTTP/1.1 transfers.
+#??? STATS_UPLOAD_RESPONSES_TITLE=Responses
+#??? STATS_UPLOAD_RESPONSES_LABEL=Total outgoing responses. These numbers are incremented before sending each response, and thus include every chunk for HTTP/1.1 transfers. 'Normal' is the number of requests for which we have attempted to transfer a portion of a file.
+#??? STATS_UPLOAD_METHODS_TITLE=Request methods
+#??? STATS_UPLOAD_METHODS_LABEL=Total incoming request methods. These numbers are incremented either for HTTP/1.1 transfer AFTER the initial incoming connection request or for push requests, after we have sent the initial GIV.
+#??? STATS_UPLOAD_GENERAL_TITLE=General
+#??? STATS_UPLOAD_GENERAL_LABEL=Total attempted, completed, interrupted or stalled uploads. These numbers are incremented per connection, not per chunk. (Stalled uploads will also be counted as an interrupted upload.)
 
 ################################################################################
 # Key/Value pairs for statistics graph axis labels
@@ -1974,6 +2060,42 @@ SENT_ALL_TCP_MESSAGES_BYTES=Wiadomo\u015bci TCP
 SENT_ALL_UDP_MESSAGES_BYTES=Wiadomo\u015bci UDP
 SENT_ALL_MULTICAST_MESSAGES_BYTES=Wiadomo\u015bci Multicast
 
+# Generic Errors
+#??? ERROR_ALL_RECEIVED=All errors
+#??? ERROR_CONNECTION_CLOSED=Connection closed
+#??? ERROR_INVALID_LENGTH=Invalid payload length
+#??? ERROR_INVALID_HOPS=Invalid Hops
+#??? ERROR_INVALID_TTL=Invalid TTL
+#??? ERROR_HOPS_EXCEED_SOFT_MAX=Hops > soft max
+#??? ERROR_HOPS_AND_TTL_OVER_HARD_MAX=(Hops + TTL) > hard max
+#??? ERROR_INVALID_CODE=Invalid message code
+#??? ERROR_ALL_QUERY_ERRORS=All query errors
+#??? ERROR_QUERY_URN=URN query
+#??? ERROR_QUERY_TOO_LARGE=Query too large
+#??? ERROR_QUERY_XML_TOO_LARGE=XML query too large
+#??? ERROR_QUERY_EMPTY=Empty query
+#??? ERROR_QUERY_ILLEGAL_CHARS=Illegal characters in query
+#??? ERROR_ALL_QUERY_REPLY_ERRORS=All query reply errors
+#??? ERROR_REPLY_INVALID_PORT=Invalid reply port
+#??? ERROR_REPLY_INVALID_ADDRESS=Invalid reply address
+#??? ERROR_REPLY_INVALID_SPEED=Invalid reply speed
+#??? ERROR_ALL_PING_REPLY_ERRORS=All ping reply errors
+#??? ERROR_PING_REPLY_INVALID_PAYLOAD=Invalid ping reply payload
+#??? ERROR_PING_REPLY_INVALID_PORT=Invalid ping reply port
+#??? ERROR_PING_REPLY_INVALID_ADDRESS=Invalid ping reply address
+#??? ERROR_PING_REPLY_INVALID_GGEP=Invalid GGEP block
+#??? ERROR_PING_REPLY_INVALID_VENDOR=Invalid vendor length
+#??? ERROR_ALL_PUSH_ERRORS=All push errors
+#??? ERROR_PUSH_INVALID_PORT=Invalid push port
+#??? ERROR_PUSH_INVALID_ADDRESS=Invalid push address
+#??? ERROR_PUSH_INVALID_PAYLOAD=Invalid push payload
+#??? ERROR_ALL_VENDOR_ERRORS=All vendor message errors
+#??? ERROR_VENDOR_INVALID_ID=Invalid ID
+#??? ERROR_VENDOR_INVALID_SELECTOR=Invalid selector
+#??? ERROR_VENDOR_INVALID_VERSION=Invalid version
+#??? ERROR_VENDOR_INVALID_PAYLOAD=Invalid payload
+#??? ERROR_VENDOR_UNRECOGNIZED=Unrecognized vendor message
+
 ###############################################################################
 #  Key/value pairs for general message labels
 ###############################################################################
@@ -1998,6 +2120,9 @@ HOPS7=Hops 7
 HOPS8=Hops 8
 HOPS9=Hops 9
 
+# Special Query labels
+#??? WHAT_IS_NEW_QUERIES=What's new?
+
 # TTL labels
 TTL0=TTL 0
 TTL1=TTL 1
@@ -2018,6 +2143,12 @@ PUSH_REQUEST_ROUTE_ERRORS=Problemy z Push
 
 # Advanced Gnutella Routing errors Query replies
 #??? HARD_LIMIT_QUERY_REPLY_ROUTE_ERRORS=Hard limit
+#??? HARD_LIMIT_QR_TTL_0=Hard limit (TTL 0)
+#??? HARD_LIMIT_QR_TTL_1=Hard limit (TTL 1)
+#??? HARD_LIMIT_QR_TTL_2=Hard limit (TTL 2)
+#??? HARD_LIMIT_QR_TTL_3=Hard limit (TTL 3)
+#??? HARD_LIMIT_QR_TTL_4=Hard limit (TTL 4)
+#??? HARD_LIMIT_QR_TTL_5=Hard limit (TTL 5 or above)
 #??? NO_ROUTE_QUERY_REPLY_ROUTE_ERRORS=No route
 
 # Advanced Gnutella Filtered messages
@@ -2032,3 +2163,119 @@ INCOMING_CONNECTION_ATTEMPTS=Przychodz\u0105ce
 #??? ALL_HTTP_REQUESTS=All requests
 #??? ALL_HTTP_HEAD_REQUESTS=HEAD requests
 #??? ALL_HTTP_GET_REQUESTS=GET requests
+#??? ALL_HTTP_GIV_REQUESTS=Push Requests
+#??? ALL_HTTP_GNUTELLA_REQUESTS=Gnutella Requests
+#??? ALL_HTTP_GNUTELLA_LIMEWIRE_REQUESTS=Gnutella (LimeWire) Requests
+#??? ALL_HTTP_CHAT_REQUESTS=Chat Requests
+#??? ALL_HTTP_MAGNET_REQUESTS=Magnet Requests
+#??? ALL_HTTP_UNKNOWN_REQUESTS=Unknown Requests
+#??? ALL_HTTP_BANNED_REQUESTS=Banned Hosts
+#??? ALL_HTTP_CLOSED_REQUESTS=Closed Immediately
+
+# Advanced Download statistics
+#??? DOWNLOAD_RESPONSE_OK=Accepted
+#??? DOWNLOAD_BUSY=Busy
+#??? DOWNLOAD_FILE_NOT_FOUND=File Not Found
+#??? DOWNLOAD_NOT_SHARING=Not Sharing Files
+#??? DOWNLOAD_QUEUED=Queued
+#??? DOWNLOAD_RANGE_UNAVAILABLE=Range Unavailable
+#??? DOWNLOAD_PROBLEM_READING_HEADER=Problem Reading Header
+#??? DOWNLOAD_UNKNOWN_CODE=Unknown Response Code
+#??? DOWNLOAD_CONTENT_URN_MISMATCH=Content URN mismatch
+#??? DOWNLOAD_NO_SUCH_RANGE=Incompatible Ranges
+#??? DOWNLOAD_ERROR=IO Error
+#??? DOWNLOAD_ALTERNATE_COLLECTED=Collected
+#??? DOWNLOAD_ALTERNATE_NOT_ADDED=Failed
+#??? DOWNLOAD_ALTERNATE_WORKED=Succeeded
+#??? DOWNLOAD_SUCCESFULL_HTTP11=Successful HTTP 1.1
+#??? DOWNLOAD_SUCCESFULL_HTTP10=Successful HTTP 1.0
+#??? DOWNLOAD_FAILED_HTTP11=Failed HTTP 1.1
+#??? DOWNLOAD_FAILED_HTTP10=Failed HTTP 1.0
+#??? DOWNLOAD_RETRIED_SUCCESS=Retried Success
+#??? DOWNLOAD_CONNECTION_ATTEMPTS=Attempted
+#??? DOWNLOAD_CONNECT_DIRECT_SUCCESS=Successful Direct Connection
+#??? DOWNLOAD_CONNECT_DIRECT_FAILURES=Failed Direct Connection
+#??? DOWNLOAD_CONNECT_PUSH_SUCCESS=Successful Push Connection
+#??? DOWNLOAD_PUSH_FAILURE_INTERRUPTED=Failed Push (Interrupted)
+#??? DOWNLOAD_PUSH_FAILURE_NO_RESPONSE=Failed Push (No GIV Received)
+#??? DOWNLOAD_PUSH_FAILURE_LOST=Failed Push (Lost Connection)
+#??? DOWNLOAD_TCP_CONNECT_TIME=TCP Connect Time
+#??? DOWNLOAD_FW_FW_SUCCESS=Successful FW-FW Connection
+#??? DOWNLOAD_FW_FW_FAILURE=Failed FW-FW Connection
+
+# Advanced Upload statistics
+#??? UPLOAD_STAT_THEX=THEX Request
+#??? UPLOAD_STAT_PUSH_PROXY_SUCCESS=Successful Push Proxy
+#??? UPLOAD_STAT_PUSH_PROXY_BAD=Malformed Push Proxy
+#??? UPLOAD_STAT_PUSH_PROXY_FAILED=Failed Push Proxy
+#??? UPLOAD_STAT_BROWSE_HOST=Browse Host
+#??? UPLOAD_STAT_PUSH_PROXY=Push Proxy
+#??? UPLOAD_STAT_UPDATE_FILE=Update File
+#??? UPLOAD_STAT_TRADITIONAL_GET=Traditional Get
+#??? UPLOAD_STAT_UNKNOWN_URN_GET=Unknown URN Get
+#??? UPLOAD_STAT_URN_GET=URN Get
+#??? UPLOAD_STAT_MALFORMED_REQUEST=Malformed Request
+#??? UPLOAD_STAT_LIMIT_REACHED=Limit Reached
+#??? UPLOAD_STAT_LIMIT_REACHED_GREEDY=Greedy Request
+#??? UPLOAD_STAT_BANNED=Banned Client
+#??? UPLOAD_STAT_UNAVAILABLE_RANGE=Unavailable Range
+#??? UPLOAD_STAT_FILE_NOT_FOUND=File Not Found
+#??? UPLOAD_STAT_FREELOADER=Freeloader
+#??? UPLOAD_STAT_QUEUED=Queued
+#??? UPLOAD_STAT_NORMAL=Normal
+#??? UPLOAD_STAT_GET=Get
+#??? UPLOAD_STAT_HEAD=Head
+#??? UPLOAD_STAT_UNKNOWN=Unknown
+#??? UPLOAD_STAT_PUSHED_GET=Pushed Get
+#??? UPLOAD_STAT_PUSHED_HEAD=Pushed Head
+#??? UPLOAD_STAT_PUSHED_UNKNOWN=Pushed Unknown
+#??? UPLOAD_STAT_PUSH_FAILED=Push Failed
+#??? UPLOAD_STAT_ATTEMPTED=Attempted
+#??? UPLOAD_STAT_COMPLETED=Completed Responses
+#??? UPLOAD_STAT_INTERRUPTED=Interrupted
+#??? UPLOAD_STAT_STALLED=Stalled
+#??? UPLOAD_STAT_COMPLETED_FILE=Completed File Transfers
+#??? UPLOAD_FW_FW_SUCCESS=Successful FW-FW Connection
+#??? UPLOAD_FW_FW_FAILURE=Failed FW-FW Connection
+
+# Advanced Handshaking statistics
+#??? LEAF_OUTGOING_REJECT_LEAF=Out Rej. (Leaf)
+#??? LEAF_OUTGOING_REJECT_OLD_UP=Out Rej. (Old Ultrapeer)
+#??? LEAF_OUTGOING_ACCEPT=Out Acc.
+#??? LEAF_INCOMING_REJECT=In Rej.
+#??? LEAF_INCOMING_ACCEPT=In Acc.
+#??? UP_OUTGOING_REJECT_FULL=Out Rej. (Full)
+#??? UP_OUTGOING_GUIDANCE_FOLLOWED=Out Acc. (Followed Guidance)
+#??? UP_OUTGOING_GUIDANCE_IGNORED=Out Acc. (Ignored Guidance)
+#??? UP_OUTGOING_ACCEPT=Out Acc. (No Guidance)
+#??? INCOMING_CRAWLER=In Crawler
+#??? UP_INCOMING_REJECT_LEAF=In Rej. (Leaf)
+#??? UP_INCOMING_ACCEPT_LEAF=In Acc. (Leaf)
+#??? UP_INCOMING_GUIDED=In Acc. (Guiding To Leaf)
+#??? UP_INCOMING_ACCEPT_UP=In Acc. (Ultrapeer)
+#??? UP_INCOMING_REJECT_NO_ROOM_LEAF=In Rej. (All Slots Taken)
+#??? UP_INCOMING_REJECT_NO_ROOM_UP=In Rej. (Network Needs Ultrapeer)
+#??? OUTGOING_BAD_CONNECT=Bad Connect
+#??? OUTGOING_SERVER_REJECT=Server Reject
+#??? OUTGOING_SERVER_UNKNOWN=Server Unknown
+#??? OUTGOING_CLIENT_REJECT=Client Reject
+#??? OUTGOING_CLIENT_UNKNOWN=Client Unknown
+#??? SUCCESSFUL_OUTGOING=Successful
+#??? INCOMING_BAD_CONNECT=Bad Connect
+#??? INCOMING_SERVER_UNKNOWN=Server Unknown
+#??? INCOMING_CLIENT_REJECT=Client Reject
+#??? INCOMING_CLIENT_UNKNOWN=Client Unknown
+#??? SUCCESSFUL_INCOMING=Successful
+#??? INCOMING_NO_CONCLUSION=No Conclusion
+#??? CRAWLER_CONNECTION=Crawler
+#??? OUTGOING_LIMEWIRE_ULTRAPEER_REJECT=LimeWire Ultrapeers
+#??? OUTGOING_LIMEWIRE_LEAF_REJECT=LimeWire Leaves
+#??? OUTGOING_OTHER_ULTRAPEER_REJECT=Other Ultrapeers
+#??? OUTGOING_OTHER_LEAF_REJECT=Other Leaves
+
+# Advanced OOB statistics
+#??? ALL_OOB_REQUESTS=Responses Requested
+#??? ALL_OOB_RESPONSES=Responses Received
+#??? ALL_OOB_BYPASSED=Responses Bypassed
+#??? STATS_OOB_THROUGHPUT_TITLE=OOB Success Rate
+#??? STATS_OOB_THROUGHPUT_LABEL=Number of Responses Requested and Received via the OOB Protocol
