--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -1496,7 +1496,7 @@ OPTIONS_PROXY_HTTP_BUTTON_LABEL=HTTP
 OPTIONS_PROXY_HOST_LABEL=Proxy
 OPTIONS_PROXY_PORT_LABEL=Port
 OPTIONS_PROXY_LOGIN_TITLE=Login Details
-OPTIONS_PROXY_LOGIN_LABEL=Configure username and password to be used for the proxy
+OPTIONS_PROXY_LOGIN_LABEL=Configure username and password to be used for the proxy.
 OPTIONS_PROXY_LOGIN_AUTHENTICATE_LABEL=Enable Authentication. (Does not work for HTTP Proxies)
 OPTIONS_PROXY_LOGIN_USERNAME_LABEL=Username
 OPTIONS_PROXY_LOGIN_PASSWORD_LABEL=Password
