--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -661,7 +661,7 @@ PLAYLIST_OPTIONS_STRING=Play Options:
 PLAYLIST_OPTIONS_CONTINUE=Continuous
 PLAYLIST_OPTIONS_SHUFFLE=Shuffle
 PLAYLIST_DIALOG_OPEN_TITLE=Select Playlist (.m3u)
-PLAYLIST_DIALOG_SAVE_TITLE=Save Playlist as....
+PLAYLIST_DIALOG_SAVE_TITLE=Save Playlist as...
 PLAYLIST_DIALOG_SAVE_SAVE=Save
 PLAYLIST_CANNOT_PLAY_FILE=LimeWire can not play the file
 PLAYLIST_FILE_UNSUPPORTED=. The file type is not recognized.
