--- a/lib/messagebundles/MessagesBundle_de.properties
+++ b/lib/messagebundles/MessagesBundle_de.properties
@@ -315,7 +315,7 @@ TABLES_REAL_TIME_SORTING=Automatisch sortieren
 TABLES_DISPLAY_TOOLTIPS=Zeige Tooltips
 
 ################################################################################
-# Keys/value pairs for SearchView stuff....
+# Keys/value pairs for SearchView stuff...
 ################################################################################
 SEARCH_NOT_CONNECTED=Sie sind nicht mit dem Netz verbunden. Um sich zu verbinden, wählen Sie "Verbinden" vom Datei Menü.
 SEARCH_DOWNLOAD_BUTTON_LABEL=Download
@@ -432,7 +432,7 @@ PLAYLIST_DELETE_BUTTON_TIP=Löscht die ausgewählte Datei aus der PlayList.
 PLAYLIST_FILE_DESCRIPTION=PlayList Dateien (*.m3u)
 
 ################################################################################
-# Key/value pairs for the integrated media player....
+# Key/value pairs for the integrated media player...
 ################################################################################
 MEDIA_PLAYER_DEFAULT_STRING=LimeWire Media Player
 MEDIA_PLAY_BUTTON_TIP=Start
@@ -446,7 +446,7 @@ PASSWORD_DIALOG_USERNAME_FIELD_LABEL=Benutzer
 PASSWORD_DIALOG_PASSWORD_FIELD_LABEL=Kennwort
 
 ################################################################################
-# Key/value pairs for Statistics String....
+# Key/value pairs for Statistics String...
 ################################################################################
 STATISTICS_AVAILABLE=verfügbar
 STATISTICS_FILES=Dateien
