--- a/lib/messagebundles/MessagesBundle_es.properties
+++ b/lib/messagebundles/MessagesBundle_es.properties
@@ -315,7 +315,7 @@ MENU_HELP_ERROR_ACCESSIBLE=Generate a popup error for testing.
 #??? TABLES_DISPLAY_TOOLTIPS=Extended tooltips
 
 ################################################################################
-# Keys/value pairs for SearchView stuff....
+# Keys/value pairs for SearchView stuff...
 ################################################################################
 #??? SEARCH_NOT_CONNECTED=You are not connected to the network. To connect, select "Connect" from the "File" menu.
 SEARCH_DOWNLOAD_BUTTON_LABEL=Descargar
@@ -432,7 +432,7 @@ PLAYLIST_DELETE_BUTTON_TIP=Quitar los archivos seleccionados de la lista de repr
 PLAYLIST_FILE_DESCRIPTION=Listas de reproducción (*.m3u)
 
 ################################################################################
-# Key/value pairs for the integrated media player....
+# Key/value pairs for the integrated media player...
 ################################################################################
 MEDIA_PLAYER_DEFAULT_STRING=Media reproductor LimeWire
 MEDIA_PLAY_BUTTON_TIP=Tocar
@@ -446,7 +446,7 @@ PASSWORD_DIALOG_USERNAME_FIELD_LABEL=Nombre de usuario
 PASSWORD_DIALOG_PASSWORD_FIELD_LABEL=Clave
 
 ################################################################################
-# Key/value pairs for Statistics String....
+# Key/value pairs for Statistics String...
 ################################################################################
 STATISTICS_AVAILABLE=disponible
 STATISTICS_FILES=archivos
@@ -516,7 +516,7 @@ DOWNLOAD_STATUS_REMOTE_QUEUED=Encolado, n°
 #??? DOWNLOAD_POSSIBLE_HOSTS=Possible hosts
 #??? DOWNLOAD_BUSY_HOSTS=Busy hosts
 #??? DOWNLOAD_QUEUED_HOSTS=Remotely queued
-#??? DOWNLOAD_SEARCHING=Locating sources....
+#??? DOWNLOAD_SEARCHING=Locating sources...
 #??? DOWNLOAD_COULD_NOT_READ_SNAPSHOT=Sorry, but LimeWire was unable to restart your old downloads.
 #??? DOWNLOAD_MAGNET_DIALOG=Would you like to download
 #??? DOWNLOAD_FROM=from
