--- a/lib/messagebundles/MessagesBundle_fi.properties
+++ b/lib/messagebundles/MessagesBundle_fi.properties
@@ -315,7 +315,7 @@ TABLES_REAL_TIME_SORTING=Sort automatically
 TABLES_DISPLAY_TOOLTIPS=Display tooltips
 
 ################################################################################
-# Keys/value pairs for SearchView stuff....
+# Keys/value pairs for SearchView stuff...
 ################################################################################
 #??? SEARCH_NOT_CONNECTED=You are not connected to the network. To connect, select "Connect" from the "File" menu.
 SEARCH_DOWNLOAD_BUTTON_LABEL=Lataa
@@ -432,7 +432,7 @@ PLAYLIST_DELETE_BUTTON_TIP=Poista valitut tiedostot soittolistalta.
 PLAYLIST_FILE_DESCRIPTION=Soittolista tiedostot (*.m3u)
 
 ################################################################################
-# Key/value pairs for the integrated media player....
+# Key/value pairs for the integrated media player...
 ################################################################################
 MEDIA_PLAYER_DEFAULT_STRING=LimeWire Media Soitin
 MEDIA_PLAY_BUTTON_TIP=Soita
@@ -446,7 +446,7 @@ PASSWORD_DIALOG_USERNAME_FIELD_LABEL=Käyttäjänimi
 PASSWORD_DIALOG_PASSWORD_FIELD_LABEL=Salasana
 
 ################################################################################
-# Key/value pairs for Statistics String....
+# Key/value pairs for Statistics String...
 ################################################################################
 STATISTICS_AVAILABLE=saatavilla
 STATISTICS_FILES=tiedostoa
@@ -516,7 +516,7 @@ DOWNLOAD_APPLY_NEW_THEME_END=." Haluatko oottaa sen käyttöön ?
 DOWNLOAD_POSSIBLE_HOSTS=Mahdollisia palvelimia
 DOWNLOAD_BUSY_HOSTS=Varattuja palvelimia
 DOWNLOAD_QUEUED_HOSTS=Jonossa palvelimella
-#??? DOWNLOAD_SEARCHING=Locating Sources....
+#??? DOWNLOAD_SEARCHING=Locating Sources...
 #??? DOWNLOAD_COULD_NOT_READ_SNAPSHOT=Sorry, but LimeWire was unable to restart your old downloads.
 #??? DOWNLOAD_MAGNET_DIALOG=Would you like to download
 #??? DOWNLOAD_FROM=from
@@ -661,7 +661,7 @@ PLAYLIST_OPTIONS_STRING=Soitto asetukset:
 PLAYLIST_OPTIONS_CONTINUE=Jatkuva
 PLAYLIST_OPTIONS_SHUFFLE=Sekoita
 PLAYLIST_DIALOG_OPEN_TITLE=Valitse soittolista (.m3u)
-PLAYLIST_DIALOG_SAVE_TITLE=Tallenna soittolista nimellä....
+PLAYLIST_DIALOG_SAVE_TITLE=Tallenna soittolista nimellä...
 PLAYLIST_DIALOG_SAVE_SAVE=Tallenna
 #??? PLAYLIST_CANNOT_PLAY_FILE=LimeWire can not play the file
 #??? PLAYLIST_FILE_UNSUPPORTED=. The file type is not recognized.
