--- a/lib/messagebundles/MessagesBundle_fr.properties
+++ b/lib/messagebundles/MessagesBundle_fr.properties
@@ -315,7 +315,7 @@ TABLES_REAL_TIME_SORTING=Tri automatique
 TABLES_DISPLAY_TOOLTIPS=Bulles d'aide étendues
 
 ################################################################################
-# Keys/value pairs for SearchView stuff....
+# Keys/value pairs for SearchView stuff...
 ################################################################################
 SEARCH_NOT_CONNECTED=Vous n'êtes pas connecté au réseau. Pour vous connecter, sélectionnez "Connecter" dans le menu "Fichiers".
 SEARCH_DOWNLOAD_BUTTON_LABEL=Charger
