--- a/lib/messagebundles/MessagesBundle_ja.properties
+++ b/lib/messagebundles/MessagesBundle_ja.properties
@@ -10,7 +10,7 @@ LOCALE_COUNTRY_NAME=\u65e5\u672c
 LOCALE_VARIANT_CODE=
 LOCALE_VARIANT_NAME=International
 LOCALE_SCRIPT_CODE=Hira
-LOCALE_SCRIPT_NAME=Hiragana, Katakana, Han
+LOCALE_SCRIPT_NAME=Far-East Asian
 LOCALE_ENGLISH_LANGUAGE_NAME=Japanese
 # UTF-8 file created in Windows 2000/XP NotePad with the "Ms Gothic" font.
 ################################################################################
