--- a/lib/messagebundles/MessagesBundle_pl.properties
+++ b/lib/messagebundles/MessagesBundle_pl.properties
@@ -315,7 +315,7 @@ MENU_HELP_ABOUT_ACCESSIBLE=Og\u00f3lne informacje o programie.
 #??? TABLES_DISPLAY_TOOLTIPS=Extended Tooltips
 
 ################################################################################
-# Keys/value pairs for SearchView stuff....
+# Keys/value pairs for SearchView stuff...
 ################################################################################
 #??? SEARCH_NOT_CONNECTED=You are not connected to the network. To connect, select "Connect" from the "File" menu.
 SEARCH_DOWNLOAD_BUTTON_LABEL=Pobierz
@@ -432,7 +432,7 @@ PLAYLIST_DELETE_BUTTON_TIP=Usuwanie wybranego pliku z playlisty.
 PLAYLIST_FILE_DESCRIPTION=Plik\u00f3w playlisty (*.m3u)
 
 ################################################################################
-# Key/value pairs for the integrated media player....
+# Key/value pairs for the integrated media player...
 ################################################################################
 MEDIA_PLAYER_DEFAULT_STRING=Odtwarzacz LimeWire
 #??? MEDIA_PLAY_BUTTON_TIP=Play
@@ -446,7 +446,7 @@ PASSWORD_DIALOG_USERNAME_FIELD_LABEL=U\u017cytkownik
 PASSWORD_DIALOG_PASSWORD_FIELD_LABEL=Has\u0142o
 
 ################################################################################
-# Key/value pairs for Statistics String....
+# Key/value pairs for Statistics String...
 ################################################################################
 STATISTICS_AVAILABLE=dost\u0119pne
 STATISTICS_FILES=plik\u00f3w
@@ -516,7 +516,7 @@ DOWNLOAD_STATUS_REMOTE_QUEUED=Zdalnie skolejkowane na pozycji
 #??? DOWNLOAD_POSSIBLE_HOSTS=Possible hosts
 #??? DOWNLOAD_BUSY_HOSTS=Busy hosts
 #??? DOWNLOAD_QUEUED_HOSTS=Remotely queued
-#??? DOWNLOAD_SEARCHING=Locating sources....
+#??? DOWNLOAD_SEARCHING=Locating sources...
 #??? DOWNLOAD_COULD_NOT_READ_SNAPSHOT=Sorry, but LimeWire was unable to restart your old downloads.
 #??? DOWNLOAD_MAGNET_DIALOG=Would you like to download
 #??? DOWNLOAD_FROM=from
@@ -1340,7 +1340,7 @@ OPTIONS_SKIN_BROWSE_BUTTON_TIP=S\u0142u\u017cy do zmiany sk\u00f3rki na inn\u010
 OPTIONS_SKIN_PREVIEW_BUTTON_TIP=Przyjrzyj si\u0119 wybranej sk\u00f3rce.
 OPTIONS_SKIN_DEFAULT_BUTTON_TIP=Nie zak\u0142adaj sk\u00f3rki na LimeWire.
 OPTIONS_SKIN_DOWNLOAD_SKINS_BUTTON_TIP=Pobieranie nowych sk\u00f3rek z www.javootoo.com...
-SKIN_APPLY_MESSAGE=LimeWire zmieni sk\u00f3rk\u0119 dopiero po jego ponownym uruchomieniu....
+SKIN_APPLY_MESSAGE=LimeWire zmieni sk\u00f3rk\u0119 dopiero po jego ponownym uruchomieniu...
 SKIN_RESTART_NEEDED=LimeWire powinien zosta\u0107 ponownie uruchomiony, aby by\u0142o wida\u0107 t\u0119 sk\u00f3rk\u0119.
 
 ################################################################################
