--- a/lib/messagebundles/MessagesBundle_tr.properties
+++ b/lib/messagebundles/MessagesBundle_tr.properties
@@ -316,7 +316,7 @@ MENU_HELP_ABOUT_ACCESSIBLE=LimeWire hakk\u0131nda bilgi.
 #??? TABLES_DISPLAY_TOOLTIPS=Extended tooltips
 
 ################################################################################
-# Keys/value pairs for searchView stuff....
+# Keys/value pairs for searchView stuff...
 ################################################################################
 #??? SEARCH_NOT_CONNECTED=You are not connected to the network. To connect, select "Connect" from the "File" menu.
 SEARCH_DOWNLOAD_BUTTON_LABEL=\u0130ndir
@@ -433,7 +433,7 @@ PLAYLIST_DELETE_BUTTON_TIP=Se\u00e7ili dosyay\u0131 \u00e7alma listesinden siler
 PLAYLIST_FILE_DESCRIPTION=\u00c7alma l\u0131stesi dosyalar\u0131 (*.m3u)
 
 ################################################################################
-# Key/value pairs for the integrated media player....
+# Key/value pairs for the integrated media player...
 ################################################################################
 MEDIA_PLAYER_DEFAULT_STRING=LimeWire ortam y\u00fcr\u00fct\u00fcc\u00fcs\u00fc
 MEDIA_PLAY_BUTTON_TIP=\u00c7al.
@@ -447,7 +447,7 @@ PASSWORD_DIALOG_USERNAME_FIELD_LABEL=Kullan\u0131c\u0131 ad\u0131
 PASSWORD_DIALOG_PASSWORD_FIELD_LABEL=Parola
 
 ################################################################################
-# Key/value pairs for statistics string....
+# Key/value pairs for statistics string...
 ################################################################################
 STATISTICS_AVAILABLE=mevcut
 STATISTICS_FILES=dosyalar
@@ -517,7 +517,7 @@ DOWNLOAD_STATUS_SAVING=Dosya kaydediliyor...
 #??? DOWNLOAD_POSSIBLE_HOSTS=Possible hosts
 #??? DOWNLOAD_BUSY_HOSTS=Busy hosts
 #??? DOWNLOAD_QUEUED_HOSTS=Remotely queued
-#??? DOWNLOAD_SEARCHING=Locating sources....
+#??? DOWNLOAD_SEARCHING=Locating sources...
 #??? DOWNLOAD_COULD_NOT_READ_SNAPSHOT=Sorry, but LimeWire was unable to restart your old downloads.
 #??? DOWNLOAD_MAGNET_DIALOG=Would you like to download
 #??? DOWNLOAD_FROM=from
@@ -662,7 +662,7 @@ PLAYLIST_OPTIONS_STRING=\u00c7alma se\u00e7enekleri:
 PLAYLIST_OPTIONS_CONTINUE=Devaml\u0131
 PLAYLIST_OPTIONS_SHUFFLE=Kar\u0131\u015f\u0131k
 PLAYLIST_DIALOG_OPEN_TITLE=\u00c7alma listesini se\u00e7 (.m3u)
-PLAYLIST_DIALOG_SAVE_TITLE=\u00c7alma listesini farkl\u0131 kaydet....
+PLAYLIST_DIALOG_SAVE_TITLE=\u00c7alma listesini farkl\u0131 kaydet...
 PLAYLIST_DIALOG_SAVE_SAVE=Kaydet
 #??? PLAYLIST_CANNOT_PLAY_FILE=LimeWire can not play the file
 #??? PLAYLIST_FILE_UNSUPPORTED=. The file type is not recognized.
