--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -315,7 +315,7 @@ TABLES_REAL_TIME_SORTING=Sort Automatically
 TABLES_DISPLAY_TOOLTIPS=Extended Tooltips
 
 ################################################################################
-# Keys/value pairs for SearchView stuff....
+# Keys/value pairs for SearchView stuff...
 ################################################################################
 SEARCH_NOT_CONNECTED=You are not connected to the network. To connect, select "Connect" from the "File" menu.
 SEARCH_DOWNLOAD_BUTTON_LABEL=Download
@@ -516,7 +516,7 @@ DOWNLOAD_APPLY_NEW_THEME_END=." Would you like to use this new skin?
 DOWNLOAD_POSSIBLE_HOSTS=Possible Hosts
 DOWNLOAD_BUSY_HOSTS=Busy Hosts
 DOWNLOAD_QUEUED_HOSTS=Remotely Queued
-DOWNLOAD_SEARCHING=Locating Sources....
+DOWNLOAD_SEARCHING=Locating Sources...
 DOWNLOAD_COULD_NOT_READ_SNAPSHOT=Sorry, but LimeWire was unable to restart your old downloads.
 DOWNLOAD_MAGNET_DIALOG=Would you like to download
 DOWNLOAD_FROM=from
