--- a/lib/messagebundles/MessagesBundle_ca.properties
+++ b/lib/messagebundles/MessagesBundle_ca.properties
@@ -315,7 +315,7 @@ MENU_HELP_ABOUT_ACCESSIBLE=Informació sobre LimeWire
 #??? TABLES_DISPLAY_TOOLTIPS=Extended tooltips
 
 ################################################################################
-# Keys/value pairs for SearchView stuff....
+# Keys/value pairs for SearchView stuff...
 ################################################################################
 #??? SEARCH_NOT_CONNECTED=You are not connected to the network. To connect, select "Connect" from the "File" menu.
 SEARCH_DOWNLOAD_BUTTON_LABEL=Descarrega
@@ -432,7 +432,7 @@ PLAYLIST_DELETE_BUTTON_TIP=Treu el fitxer seleccionat de la llista de reproducci
 PLAYLIST_FILE_DESCRIPTION=Llistas de reproducció (*.m3u)
 
 ################################################################################
-# Key/value pairs for the integrated media player....
+# Key/value pairs for the integrated media player...
 ################################################################################
 MEDIA_PLAYER_DEFAULT_STRING=Reproductor LimeWire MP3
 MEDIA_PLAY_BUTTON_TIP=Tocar
@@ -446,7 +446,7 @@ PASSWORD_DIALOG_USERNAME_FIELD_LABEL=Nom d'usuari
 PASSWORD_DIALOG_PASSWORD_FIELD_LABEL=Paraula de pas
 
 ################################################################################
-# Key/value pairs for Statistics String....
+# Key/value pairs for Statistics String...
 ################################################################################
 STATISTICS_AVAILABLE=disponible
 STATISTICS_FILES=fitxers
@@ -516,7 +516,7 @@ DOWNLOAD_APPLY_NEW_THEME_END=." Would you like to use this new skin?
 #??? DOWNLOAD_POSSIBLE_HOSTS=Possible hosts
 DOWNLOAD_BUSY_HOSTS=Servidors ocupats
 DOWNLOAD_QUEUED_HOSTS=A la cua distant
-#??? DOWNLOAD_SEARCHING=Locating sources....
+#??? DOWNLOAD_SEARCHING=Locating sources...
 #??? DOWNLOAD_COULD_NOT_READ_SNAPSHOT=Sorry, but LimeWire was unable to restart your old downloads.
 #??? DOWNLOAD_MAGNET_DIALOG=Would you like to download
 #??? DOWNLOAD_FROM=from
@@ -661,7 +661,7 @@ PLAYLIST_OPTIONS_STRING=Opcions de reproducció:
 PLAYLIST_OPTIONS_CONTINUE=Contínua
 PLAYLIST_OPTIONS_SHUFFLE=Aleatòria
 PLAYLIST_DIALOG_OPEN_TITLE=Tria llista (.m3u)
-PLAYLIST_DIALOG_SAVE_TITLE=Desa llista com....
+PLAYLIST_DIALOG_SAVE_TITLE=Desa llista com...
 PLAYLIST_DIALOG_SAVE_SAVE=Desa
 #??? PLAYLIST_CANNOT_PLAY_FILE=LimeWire can not play the file
 #??? PLAYLIST_FILE_UNSUPPORTED=. The file type is not recognized.
