--- a/lib/messagebundles/MessagesBundle_it.properties
+++ b/lib/messagebundles/MessagesBundle_it.properties
@@ -315,7 +315,7 @@ MENU_HELP_ABOUT_ACCESSIBLE=Mostra le informazioni su LimeWire.
 #??? TABLES_DISPLAY_TOOLTIPS=Display tooltips
 
 ################################################################################
-# Keys/value pairs for SearchView stuff....
+# Keys/value pairs for SearchView stuff...
 ################################################################################
 #??? SEARCH_NOT_CONNECTED=You are not connected to the network. To connect, select "Connect" from the "File" menu.
 SEARCH_DOWNLOAD_BUTTON_LABEL=Scarica
@@ -432,7 +432,7 @@ PLAYLIST_DELETE_BUTTON_TIP=Rimuove l’archivo selezionato dalla lista.
 PLAYLIST_FILE_DESCRIPTION=Liste d'ascolto (*.m3u)
 
 ################################################################################
-# Key/value pairs for the integrated media player....
+# Key/value pairs for the integrated media player...
 ################################################################################
 MEDIA_PLAYER_DEFAULT_STRING=Lettore MP3 di LimeWire
 #??? MEDIA_PLAY_BUTTON_TIP=Play
@@ -446,7 +446,7 @@ PASSWORD_DIALOG_USERNAME_FIELD_LABEL=Nome utente
 PASSWORD_DIALOG_PASSWORD_FIELD_LABEL=Codice di accesso
 
 ################################################################################
-# Key/value pairs for Statistics String....
+# Key/value pairs for Statistics String...
 ################################################################################
 STATISTICS_AVAILABLE=disponibili
 STATISTICS_FILES=documenti
@@ -516,7 +516,7 @@ DOWNLOAD_HOST_LABEL=ospite
 DOWNLOAD_POSSIBLE_HOSTS=Ospite possibile
 #??? DOWNLOAD_BUSY_HOSTS=Ospite busy
 #??? DOWNLOAD_QUEUED_HOSTS=Remotely queued
-#??? DOWNLOAD_SEARCHING=Locating sources....
+#??? DOWNLOAD_SEARCHING=Locating sources...
 #??? DOWNLOAD_COULD_NOT_READ_SNAPSHOT=Sorry, but LimeWire was unable to restart your old downloads.
 #??? DOWNLOAD_MAGNET_DIALOG=Would you like to download
 #??? DOWNLOAD_FROM=from
@@ -661,7 +661,7 @@ PLAYLIST_OPTIONS_STRING=Opzioni di ascolto:
 PLAYLIST_OPTIONS_CONTINUE=Riproduci continuamente
 PLAYLIST_OPTIONS_SHUFFLE=Casuale
 PLAYLIST_DIALOG_OPEN_TITLE=Seleziona la lista (.m3u)
-PLAYLIST_DIALOG_SAVE_TITLE=Salva la lista con come....
+PLAYLIST_DIALOG_SAVE_TITLE=Salva la lista con come...
 PLAYLIST_DIALOG_SAVE_SAVE=Salva
 #??? PLAYLIST_CANNOT_PLAY_FILE=LimeWire can not play the file
 #??? PLAYLIST_FILE_UNSUPPORTED=. The file type is not recognized.
