--- a/lib/messagebundles/MessagesBundle_zh_TW.properties
+++ b/lib/messagebundles/MessagesBundle_zh_TW.properties
@@ -10,7 +10,7 @@ LOCALE_COUNTRY_NAME=\u4e2d\u570b\u53f0\u7063, \u9999\u6e2f, \u6fb3\u9580
 LOCALE_VARIANT_CODE=
 LOCALE_VARIANT_NAME=\u570b\u969b
 LOCALE_SCRIPT_CODE=Hani
-LOCALE_SCRIPT_NAME=Han
+LOCALE_SCRIPT_NAME=Far-East Asian
 LOCALE_ENGLISH_LANGUAGE_NAME=Chinese (Traditional)
 # UTF-8 file created on Windows 2000/XP NotePad with Big5 "\u7d30\u660e\u9ad4" MingLiU font.
 ################################################################################
@@ -315,7 +315,7 @@ MENU_HELP_ABOUT_ACCESSIBLE=\u95dc\u65bc LimeWire \u7684\u4fe1\u606f
 #??? TABLES_DISPLAY_TOOLTIPS=Extended tooltips
 
 ################################################################################
-# Keys/value pairs for SearchView stuff....
+# Keys/value pairs for SearchView stuff...
 ################################################################################
 #??? SEARCH_NOT_CONNECTED=You are not connected to the network. To connect, select "Connect" from the "File" menu.
 SEARCH_DOWNLOAD_BUTTON_LABEL=\u4e0b\u8f09
@@ -432,7 +432,7 @@ PLAYLIST_DELETE_BUTTON_TIP=\u5f9e \u64ad\u653e\u5217\u8868\u4e2d\u5220\u9664\u90
 PLAYLIST_FILE_DESCRIPTION=\u64ad\u653e\u5217\u8868\u7684\u6587\u4ef6 (*.m3u)
 
 ################################################################################
-# Key/value pairs for the integrated media player....
+# Key/value pairs for the integrated media player...
 ################################################################################
 MEDIA_PLAYER_DEFAULT_STRING=LimeWire \u591a\u5a92\u9ad4\u64ad\u653e\u6a5f
 #??? MEDIA_PLAY_BUTTON_TIP=Play
@@ -446,7 +446,7 @@ PASSWORD_DIALOG_USERNAME_FIELD_LABEL=\u7528\u6236\u540d
 PASSWORD_DIALOG_PASSWORD_FIELD_LABEL=\u5bc6\u78bc
 
 ################################################################################
-# Key/value pairs for Statistics String....
+# Key/value pairs for Statistics String...
 ################################################################################
 STATISTICS_AVAILABLE=\u53ef\u7528\u7684
 STATISTICS_FILES=\u6587\u4ef6
@@ -516,7 +516,7 @@ DOWNLOAD_HOSTS_LABEL=\u4e3b\u6a5f
 #??? DOWNLOAD_POSSIBLE_HOSTS=Possible hosts
 #??? DOWNLOAD_BUSY_HOSTS=Busy hosts
 #??? DOWNLOAD_QUEUED_HOSTS=Remotely queued
-#??? DOWNLOAD_SEARCHING=Locating sources....
+#??? DOWNLOAD_SEARCHING=Locating sources...
 #??? DOWNLOAD_COULD_NOT_READ_SNAPSHOT=Sorry, but LimeWire was unable to restart your old downloads.
 #??? DOWNLOAD_MAGNET_DIALOG=Would you like to download
 #??? DOWNLOAD_FROM=from
@@ -661,7 +661,7 @@ PLAYLIST_OPTIONS_STRING=\u64ad\u653e\u9078\u9805:
 PLAYLIST_OPTIONS_CONTINUE=\u9023\u7e8c
 PLAYLIST_OPTIONS_SHUFFLE=\u8df3\u8dc3
 PLAYLIST_DIALOG_OPEN_TITLE=\u9078\u64c7\u64ad\u653e\u5217\u8868 (.m3u)
-PLAYLIST_DIALOG_SAVE_TITLE=\u5132\u5b58\u64ad\u653e\u5217\u8868\u5230....
+PLAYLIST_DIALOG_SAVE_TITLE=\u5132\u5b58\u64ad\u653e\u5217\u8868\u5230...
 PLAYLIST_DIALOG_SAVE_SAVE=\u5132\u5b58
 #??? PLAYLIST_CANNOT_PLAY_FILE=LimeWire can not play the file
 #??? PLAYLIST_FILE_UNSUPPORTED=. The file type is not recognized.
