Separate the "Latin (Baltic Rim)" script family name to help dandidate translators select an appropriate font or encoding.

--- a/lib/messagebundles/MessagesBundle_lv.properties
+++ b/lib/messagebundles/MessagesBundle_lv.properties
@@ -10,7 +10,7 @@ LOCALE_COUNTRY_NAME=Latvija
 LOCALE_VARIANT_CODE=
 LOCALE_VARIANT_NAME=International
 LOCALE_SCRIPT_CODE=Latn
-LOCALE_SCRIPT_NAME=Latin (Other)
+LOCALE_SCRIPT_NAME=Latin (Baltic Rim)
 LOCALE_ENGLISH_LANGUAGE_NAME=Latvian
 
 ################################################################################
