--- a/lib/messagebundles/MessagesBundle_et.properties
+++ b/lib/messagebundles/MessagesBundle_et.properties
@@ -10,7 +10,7 @@ LOCALE_COUNTRY_NAME=Eesti
 LOCALE_VARIANT_CODE=
 LOCALE_VARIANT_NAME=International
 LOCALE_SCRIPT_CODE=Latn
-LOCALE_SCRIPT_NAME=Latin (Other)
+LOCALE_SCRIPT_NAME=Latin (Baltic Rim)
 LOCALE_ENGLISH_LANGUAGE_NAME=Estonian
 # UTF-8 encoded file (uses some North European characters from ISO-8859-4)
 ################################################################################
