add one translation for length (duration)

--- a/lib/messagebundles/MessagesBundle_tr.properties
+++ b/lib/messagebundles/MessagesBundle_tr.properties
@@ -768,7 +768,7 @@ META_EDITOR_GENRE_LABEL=Genre:
 META_EDITOR_TYPE_LABEL=T\u00fcr:
 #??? META_EDITOR_TRACK_LABEL=Track:
 META_EDITOR_LANGUAGE_LABEL=Dil:
-#??? META_EDITOR_SECONDS_LABEL=Length:
+META_EDITOR_SECONDS_LABEL=S\u00fcre:
 #??? META_EDITOR_BITRATE_LABEL=Bitrate:
 #??? META_EDITOR_COMMENTS_LABEL=Comments:
 META_EDITOR_SHA1_LABEL=SHA1:
